<resources>
    <string name="app_name">John Brilhart\'s Menu Project"</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sms_btn">SMS</string>
    <string name="phone_btn">PHONE</string>
    <string name="web_btn">WEB</string>
    <string name="map_btn">MAP</string>
    <string name="share_btn">SHARE</string>
    <string name="new_activity_text">Hi, John Brilhart! Welcome to your New Activity!</string>
    <string name="new_activity_btn">NEW ACTIVITY</string>
    <string name="New_Activity_name"> New Activity</string>
    <string name="help_txt">Any Questions? Please feel free to ask on Slack or at my email: jbrilhar@gmail.com</string>
    <string name="Help_Activity">"Help "</string>
</resources>