<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="pace.cs639.menuproject.MainActivity">


    <Button
        android:id="@+id/sms_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_btn"
        android:onClick="launchSMS"/>

    <Button
        android:id="@+id/phone_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_btn"
        android:onClick="launchPhone"
        />

    <Button
        android:id="@+id/web_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_btn"
        android:onClick="launchWeb"/>

    <Button
        android:id="@+id/map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_btn"
        android:onClick="launchMap"/>

    <Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_btn"
        android:onClick="launchShare"/>

    <Button
        android:id="@+id/new_activity_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_activity_btn"
        android:onClick="launchNewActivity"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ega" />
</LinearLayout>



